--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: myFirstFont;
-    src: url('../assets/fonts/Poppins-Bold.ttf');
+    src: url('../fonts/Poppins-Bold.ttf');
 }
 
 * {
@@ -8,7 +8,7 @@
 }
 
 .container-first {
-    background: linear-gradient(rgba(51, 255, 208, 0.9), rgba(4, 255, 209, 0.68)), url(../assets/images/background.jpg);
+    background: linear-gradient(rgba(51, 255, 208, 0.9), rgba(4, 255, 209, 0.68)), url(../images/background.jpg);
     max-width: 100%;
     height: auto;
     margin: 0 auto;
