--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,48 +1,39 @@
 @font-face {
-    font-family: myFirstFont;
-    src: url('../fonts/Poppins-Bold.ttf');
+    font-family: EudoxusSans-Bold;
+    src: url('../fonts/EudoxusSans-Bold.ttf');
 }
 
 * {
-    color: #5e646d;
+    color: #fff;
+}
+
+#metamask-unlocked, #current-network {
+    font-size: 0.7rem;
+    color: #fff;
+}
+
+#current-address {
+    font-size: 0.7rem;
 }
 
 .container-first {
-    background: linear-gradient(rgba(51, 255, 208, 0.9), rgba(4, 255, 209, 0.68)), url(../images/background.jpg);
-    max-width: 100%;
-    height: auto;
-    margin: 0 auto;
-    overflow: hidden;
-    padding: 10% 23% 10% 23%;
-    align-items: center;
-    justify-content: space-around;
-    display: flex;
-    float: none;
+    background: linear-gradient(rgba(51, 255, 208, 0.9), rgba(4, 255, 209, 0.68)), url(../images/back.png);
+    height: 100vh;
 }
 
 .wrap-form {
-    width: 790px;
     background: #fff;
     border-radius: 10px;
     overflow: hidden;
-    padding: 60px 55px 90px 55px;
-    justify-content: center;
+}
+
+#metamask-locked, #metamask-unlocked {
+    padding-top: 1vh;
 }
 
 .submit-button {
-    background: #484747;
-    border: 1px solid beige;
-    margin-top: 4%;
-    margin-left: 31%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0 20px;
-    min-width: 244px;
-    height: 50px;
-    font-family: myFirstFont;
-    font-size: 20px;
-    color: white;
+    margin-left: 20vw;
+    margin-right: 20vw;
 }
 
 .submit-button:hover {
@@ -50,16 +41,18 @@
 }
 
 .heading {
-    font-family: myFirstFont;
-    font-size: 30px;
+    font-family: EudoxusSans-Bold;
+    font-size: 4rem;
 }
-
+p {
+    font-size: 1rem;
+}
 .form-group {
     margin-bottom: 1.2em;
 }
 
 .form-control {
-    font-family: myFirstFont;
+    font-family: EudoxusSans-Bold;
 }
 
 .form-control:focus {
@@ -92,9 +85,6 @@
     border-color: #a4fdd6;
 }
 
-#current-network {
-    color: #8b0000;
-}
 
 .align-self-end {
     align-self: flex-end !important;
@@ -103,19 +93,9 @@
     margin-left: 153%;
 }
 
-.metamask-text {
-    color: #5fd6b9;
-    vertical-align: sub;
-}
-
 .material-icons.metamask-span {
     vertical-align: middle;
-}
-
-.material-icons.info {
-    position: absolute;
-    margin-top: -5%;
-    margin-left: 97%;
+    font-size: 0.7rem;
 }
 
 .container-second {
